// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render a default component 1`] = `
<div
  className="switch-wrapper"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <label
    htmlFor="defaultSwitch"
    onKeyDown={[Function]}
    onMouseDown={[Function]}
  >
    <div
      className="switch"
    >
      <div
        className="label-container"
      >
        <div
          className="label-text"
          id="label1"
        >
          default
        </div>
        <div
          className="status-label-text"
        >
          <FormattedMessage
            id="Terra.switch.switchstatuslabel.off"
            values={Object {}}
          />
        </div>
      </div>
      <div
        className="tray unselected"
      >
        <button
          aria-checked={false}
          aria-labelledby="label1"
          className="slider"
          data-focus-styles-enabled={true}
          disabled={false}
          id="defaultSwitch"
          onClick={[Function]}
          role="switch"
          tabIndex="0"
          type="button"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`Switch should render as disabled when set 1`] = `
<div
  className="switch-wrapper"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <label
    htmlFor="disabledSwitch"
    onKeyDown={[Function]}
    onMouseDown={[Function]}
  >
    <div
      className="switch is-disabled"
    >
      <div
        className="label-container"
      >
        <div
          className="label-text"
          id="label2"
        >
          Label
        </div>
        <div
          className="status-label-text"
        >
          <FormattedMessage
            id="Terra.switch.switchstatuslabel.off"
            values={Object {}}
          />
        </div>
      </div>
      <div
        className="tray unselected is-disabled"
      >
        <button
          aria-checked={false}
          aria-labelledby="label2"
          className="slider is-disabled"
          data-focus-styles-enabled={true}
          disabled={true}
          id="disabledSwitch"
          onClick={[Function]}
          role="switch"
          tabIndex="0"
          type="button"
        />
      </div>
    </div>
  </label>
</div>
`;
